# 32h5-usbc-drp

./: .cproject  .gitmodules  .mxproject  .project  CMakeLists.txt  arm-none-eabi.cmake  h533-300626.ioc
.github/agents/: Default.agent.md
Core/App/: app_cli.c  app_cli.h  app_cli_transport.c  app_cli_transport.h  app_usb_status.c  app_usb_status.h  app_usb_status_reporter.c  app_usb_status_reporter.h  drp_fsm.c  drp_fsm.h  m16c_vnc_bus.c  m16c_vnc_bus.h  uart.c  uart.h  uart_log.c  uart_log.h  ucpd_diag.c  ucpd_diag.h  usb_debug.c  usb_debug.h  usb_manager.c  usb_manager.h  usb_mode_button.c  usb_mode_button.h  usb_role_policy.c  usb_role_policy.h  usb_time.c  usb_time.h
Core/Board/: board.c  board.h  typec.c  typec.h  uart.c  uart.h  usb_hw.c  usb_hw.h
Core/Inc/: main.h  stm32h5xx_hal_conf.h  stm32h5xx_it.h
Core/Src/: main.c  stm32h5xx_hal_msp.c  stm32h5xx_it.c
Core/USB/: ftdi_host.c  ftdi_host.h  tusb_config.h  usb_device_tusb.c  usb_device_tusb.h  usb_host_tusb.c  usb_host_tusb.h
Core/USB/port/: dcd_stm32h5.c  tusb_port.c
Drivers/STM32H5xx_HAL_Driver/Src/: stm32h5xx_ll_ucpd.c
cmake/: toolchain-arm-none-eabi.cmake
